hw1/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  labels:
    app: hello-app
spec:
  ports:
    - name: 8000tcp
      port: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: hello-app
