hw1/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /()(health)(/?$)
            pathType: Exact
            backend:
              service:
                name: hello-app-service
                port:
                  number: 8000
          - path: /otusapp/bogdan(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hello-app-service
                port:
                  number: 8000
